# Adguard-Home-For-Magisk-Mod-Clash

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-release.yml
scripts/: build_rulesets.py  ruleset_core.py  ruleset_parser.py  ruleset_types.py
tests/: test_build_rulesets.py
